Fix bug with view transitions on mobile devices

--- a/app/styles/mobile.scss
+++ b/app/styles/mobile.scss
@@ -79,7 +79,7 @@ table {
 
 .view.ng-enter,
 .view.ng-leave {
-  transition: all 10s ease;
+  transition: all 1s ease;
 }
 
 .view.ng-enter {
